[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://art/fonts/LazenbyCompSmooth.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://InfoPanel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 27
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 65
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="InfoPanel" type="CanvasLayer" parent="."]
offset = Vector2( 0, 736 )
transform = Transform2D( 1, 0, 0, 1, 0, 736 )
script = ExtResource( 3 )

[node name="background2" type="ColorRect" parent="InfoPanel"]
margin_right = 1120.0
margin_bottom = 64.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="ScoreLabel" type="Label" parent="InfoPanel"]
margin_left = 8.0
margin_right = 157.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.682353, 0.305882, 0.305882, 1 )
custom_fonts/font = SubResource( 1 )
text = "SCORE"
align = 2

[node name="Score" type="Label" parent="InfoPanel"]
margin_left = 168.0
margin_right = 317.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.392157, 0.85098, 0.972549, 1 )
custom_fonts/font = SubResource( 1 )
text = "000000"

[node name="WomenLabel" type="Label" parent="InfoPanel"]
margin_left = 424.0
margin_right = 592.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.682353, 0.305882, 0.305882, 1 )
custom_fonts/font = SubResource( 1 )
text = "WOMEN"
align = 2

[node name="Women" type="Label" parent="InfoPanel"]
margin_left = 608.0
margin_right = 720.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.392157, 0.85098, 0.972549, 1 )
custom_fonts/font = SubResource( 1 )
text = "000"

[node name="LevelLabel" type="Label" parent="InfoPanel"]
margin_left = 752.0
margin_right = 920.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.682353, 0.305882, 0.305882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level"
align = 2

[node name="Level" type="Label" parent="InfoPanel"]
margin_left = 936.0
margin_right = 1048.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.392157, 0.85098, 0.972549, 1 )
custom_fonts/font = SubResource( 1 )
text = "0000"

[node name="background" type="ColorRect" parent="."]
margin_top = -8.0
margin_right = 1120.0
margin_bottom = 736.0
color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Start" type="Button" parent="HUD"]
margin_left = 8.0
margin_top = 688.0
margin_right = 112.0
margin_bottom = 728.0
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="Message" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -64.0
margin_right = -8.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.392157, 0.85098, 0.972549, 1 )
custom_fonts/font = SubResource( 2 )
text = "This Is a message"
align = 1
valign = 1

[node name="Fullscreen" type="Button" parent="HUD"]
margin_left = 1008.0
margin_top = 688.0
margin_right = 1112.0
margin_bottom = 728.0
custom_fonts/font = SubResource( 4 )
text = "Fullscreen"

[connection signal="pressed" from="HUD/Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HUD/Fullscreen" to="." method="_on_Fullscreen_pressed"]
